-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 17.0.0
-
None
-
-
08511d6b5 (17.0)
To reproduce:
1. Start debugging some app.
2. Close Creator, confirm "Force Quit" -> Creator crashes.
Call stack:
1 QList<QDockAreaLayoutItem>::size qlist.h 402 0x7ffff6a1fec0 2 QDockAreaLayoutInfo::indexOf qdockarealayout.cpp 1479 0x7ffff6a154fe 3 QDockAreaLayout::indexOf qdockarealayout.cpp 2472 0x7ffff6a19ab9 4 QMainWindowLayout::dockWidgetArea qmainwindowlayout.cpp 1877 0x7ffff6a8d504 5 QMainWindow::dockWidgetArea qmainwindow.cpp 1150 0x7ffff6a81a76 6 operator() fancymainwindow.cpp 590 0x7ffff774f18e 7 operator() qobjectdefs_impl.h 141 0x7ffff77575a3 8 QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Utils::FancyMainWindow::addDockForWidget(QWidget *, bool)::<lambda()>>::call(Utils::FancyMainWindow::addDockForWidget(QWidget *, bool)::<lambda()>&, void * *)::<lambda()>>(void * *, struct {...} &&) qobjectdefs_impl.h 65 0x7ffff7758406 9 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Utils::FancyMainWindow::addDockForWidget(QWidget *, bool)::<lambda()>>::call(struct {...} &, void * *) qobjectdefs_impl.h 140 0x7ffff77575e8 10 QtPrivate::FunctorCallable<Utils::FancyMainWindow::addDockForWidget(QWidget *, bool)::<lambda()>>::call<QtPrivate::List<>, void>(struct {...} &, void *, void * *) qobjectdefs_impl.h 362 0x7ffff7755e85 11 QtPrivate::QCallableObject<Utils::FancyMainWindow::addDockForWidget(QWidget *, bool)::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobjectdefs_impl.h 572 0x7ffff7754e6e 12 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 486 0x7ffff45ec587 13 doActivate<false> qobject.cpp 4131 0x7ffff468b4fc 14 QMetaObject::activate qobject.cpp 4191 0x7ffff468026b 15 QDockWidget::visibilityChanged moc_qdockwidget.cpp 293 0x7ffff6a30c13 16 QDockWidget::event qdockwidget.cpp 1644 0x7ffff6a2fb3d 17 QApplicationPrivate::notify_helper qapplication.cpp 3300 0x7ffff67aa8f0 18 QApplication::notify qapplication.cpp 3247 0x7ffff67aa6ba 19 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1177 0x7ffff45e529f 20 QCoreApplication::sendEvent qcoreapplication.cpp 1617 0x7ffff45e5e45 21 QWidgetPrivate::hide_helper qwidget.cpp 8216 0x7ffff683e7b2 22 QWidgetPrivate::setVisible qwidget.cpp 8413 0x7ffff683f414 23 QWidget::setVisible qwidget.cpp 8321 0x7ffff683ed55 24 QWidget::hide qwidget.cpp 8186 0x7ffff683e674 25 QWidget::setParent qwidget.cpp 10760 0x7ffff6844975 26 QWidget::setParent qwidget.cpp 10683 0x7ffff6844385 27 QDockWidget::~QDockWidget qdockwidget.cpp 1365 0x7ffff6a2eda7 28 Utils::DockWidget::~DockWidget fancymainwindow.cpp 357 0x7ffff774d6bd 29 Utils::DockWidget::~DockWidget fancymainwindow.cpp 357 0x7ffff774d6e6 30 QObjectPrivate::deleteChildren qobject.cpp 2210 0x7ffff467952b 31 QWidget::~QWidget qwidget.cpp 1567 0x7ffff68298b5 32 QMainWindow::~QMainWindow qmainwindow.cpp 338 0x7ffff6a801e0 33 Utils::FancyMainWindow::~FancyMainWindow fancymainwindow.cpp 564 0x7ffff774f013 34 Utils::DebuggerMainWindow::~DebuggerMainWindow debuggermainwindow.cpp 306 0x7fffdcc5fb64 35 Utils::DebuggerMainWindow::~DebuggerMainWindow debuggermainwindow.cpp 306 0x7fffdcc5fb8e 36 Utils::DebuggerMainWindow::doShutdown debuggermainwindow.cpp 326 0x7fffdcc5fd12 37 operator() debuggerplugin.cpp 2117 0x7fffdcc8bfa8 38 operator() qobjectdefs_impl.h 141 0x7fffdcc96231 39 QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Debugger::Internal::DebuggerPlugin::aboutToShutdown()::<lambda()>>::call(Debugger::Internal::DebuggerPlugin::aboutToShutdown()::<lambda()>&, void * *)::<lambda()>>(void * *, struct {...} &&) qobjectdefs_impl.h 65 0x7fffdcc969c7 40 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Debugger::Internal::DebuggerPlugin::aboutToShutdown()::<lambda()>>::call(struct {...} &, void * *) qobjectdefs_impl.h 140 0x7fffdcc96276 41 QtPrivate::FunctorCallable<Debugger::Internal::DebuggerPlugin::aboutToShutdown()::<lambda()>>::call<QtPrivate::List<>, void>(struct {...} &, void *, void * *) qobjectdefs_impl.h 362 0x7fffdcc95581 42 QtPrivate::QCallableObject<Debugger::Internal::DebuggerPlugin::aboutToShutdown()::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobjectdefs_impl.h 572 0x7fffdcc94992 43 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 486 0x7ffff45ec587 44 QMetaCallEvent::placeMetaCall qobject.cpp 620 0x7ffff4676679 45 QObject::event qobject.cpp 1418 0x7ffff4677c1f 46 QApplicationPrivate::notify_helper qapplication.cpp 3300 0x7ffff67aa8f0 47 QApplication::notify qapplication.cpp 3251 0x7ffff67aa6e2 48 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1177 0x7ffff45e529f 49 QCoreApplication::sendEvent qcoreapplication.cpp 1617 0x7ffff45e5e45 50 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1951 0x7ffff45e6e41 51 QEventDispatcherUNIX::processEvents qeventdispatcher_unix.cpp 418 0x7ffff48c7a89 52 QXcbUnixEventDispatcher::processEvents qxcbeventdispatcher.cpp 24 0x7fffefd10a36 53 QEventLoop::processEvents qeventloop.cpp 103 0x7ffff45fc5e3 54 QEventLoop::exec qeventloop.cpp 185 0x7ffff45fc952 55 ExtensionSystem::Internal::PluginManagerPrivate::shutdown pluginmanager.cpp 1531 0x7ffff7f00077 56 ExtensionSystem::PluginManager::shutdown pluginmanager.cpp 445 0x7ffff7ef730d 57 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void ( *)()>::call(void ( *&)(), void * *)::{lambda()#1}::operator()() const qobjectdefs_impl.h 141 0x555555583258 58 QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void ( *)()>::call(void ( *&)(), void * *)::{lambda()#1}>(void * *, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void ( *)()>::call(void ( *&)(), void * *)::{lambda()#1}&&) qobjectdefs_impl.h 65 0x555555584cbb 59 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void ( *)()>::call(void ( *&)(), void * *) qobjectdefs_impl.h 140 0x5555555832a1 60 QtPrivate::FunctionPointer<void ( *)()>::call<QtPrivate::List<>, void>(void ( *)(), void *, void * *) qobjectdefs_impl.h 223 0x555555581465 61 QtPrivate::QCallableObject<void ( *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobjectdefs_impl.h 572 0x55555557ec16 62 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 486 0x7ffff45ec587 63 doActivate<false> qobject.cpp 4131 0x7ffff468b4fc 64 QMetaObject::activate qobject.cpp 4191 0x7ffff468026b 65 QCoreApplication::aboutToQuit moc_qcoreapplication.cpp 267 0x7ffff45eadd8 66 QCoreApplication::exit qcoreapplication.cpp 1579 0x7ffff45e5d30 67 QCoreApplication::event qcoreapplication.cpp 2079 0x7ffff45e76ca 68 QApplication::event qapplication.cpp 1694 0x7ffff67a457a 69 SharedTools::QtSingleApplication::event qtsingleapplication.cpp 113 0x55555558a126 70 QApplicationPrivate::notify_helper qapplication.cpp 3300 0x7ffff67aa8f0 71 QApplication::notify qapplication.cpp 3251 0x7ffff67aa6e2 72 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1177 0x7ffff45e529f 73 QCoreApplication::sendEvent qcoreapplication.cpp 1617 0x7ffff45e5e45 74 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1951 0x7ffff45e6e41 75 QEventDispatcherUNIX::processEvents qeventdispatcher_unix.cpp 418 0x7ffff48c7a89 76 QXcbUnixEventDispatcher::processEvents qxcbeventdispatcher.cpp 24 0x7fffefd10a36 77 QEventLoop::processEvents qeventloop.cpp 103 0x7ffff45fc5e3 78 QEventLoop::exec qeventloop.cpp 185 0x7ffff45fc952 79 QCoreApplication::exec qcoreapplication.cpp 1520 0x7ffff45e5bfa 80 QGuiApplication::exec qguiapplication.cpp 1968 0x7ffff56098d2 81 QApplication::exec qapplication.cpp 2568 0x7ffff67a78e1 82 main main.cpp 1024 0x555555567f48