Debugger: Fix a crash on shutdown while debugging

The destructor of QDockWidget changes its visibility,
and emits QDockWidget::visibilityChanged() signal,
which is bad. We are still connected to this signal via
lambda inside FancyMainWindow::addDockForWidget().

To prevent lambda being called from d'tor of QDockWidget
we disconnect it explicitly inside DockWidget d'tor.

Fixes: QTCREATORBUG-33140
Task-number: QTBUG-136485
Change-Id: Ie804e70a51393c14e5067a7bd4ca02fb9d7b3b82
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: hjk <hjk@qt.io>